<resources>
    <string name="app_name">womenSafe</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="type_your_first_name">Type your first name</string>
    <string name="last_name">Last Name</string>
    <string name="type_your_last_name">Type your last name</string>
    <string name="contact_number">Contact Number</string>
    <string name="type_your_contact_number">Type your contact number</string>
    <string name="nic_number">NIC Number</string>
    <string name="type_your_nic_number">Type your NIC number</string>
    <string name="address">Address</string>
    <string name="type_your_address">Type your address</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="type_your_e_mail_address">Type your e-mail address</string>
    <string name="health_issues">Health Issues</string>
    <string name="type_about_any_health_issue_you_have">Type about any health issue you have</string>
    <string name="type_your_password">Type your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="guardian_s_name">Guardian\'s Name</string>
    <string name="type_your_guardian_s_name">Type your guardian\'s name</string>
    <string name="type_your_guardian_s_contact_number">Type your guardian\'s contact number</string>
    <string name="type_your_guardian_s_nic_number">Type your guardian\'s NIC number</string>
    <string name="add_details">Add Details</string>
    <string name="dashboard">Dashboard</string>
    <string name="if_you_want_add_a_voice_message">If you want add a voice message</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="if_you_do_not_want_add_a_voice_message_or_finished_recording_the_message_send_the_alert">If you do not want add a voice message or finished recording the message, send the alert</string>
    <string name="alert">ALERT</string>
    <string name="admin">ADMIN</string>
    <string name="user">USER</string>
    <string name="press_for_safety">Press for Safety</string>
    <string name="need_assistance">Need Assistance?</string>
    <string name="send_emergency_alert_with_or_without_voice_messege">Send Emergency Alert! With or Without Voice Messege</string>
    <string name="stay_calm_until_help_arrives_support_team_is_on_the_way">Stay Calm Until Help Arrives,    Support Team is on the Way!</string>
    <string name="send_the_alert_if_you_don_t_want_to_add_a_voice_message_or_are_finished_recording_it">Send the alert if you don\'t want to add a voice message or are finished recording it.</string>
    <string name="hit_the_alert_if_no_voice_or_done_recording">Hit the alert if no voice or done recording.</string>
    <string name="add_a_vocal_message">Add a vocal message</string>
    <string name="add_a_vocal_messege">Add a vocal messege</string>
</resources>